--- a/src/components/chat-view/ChatView.module.scss
+++ b/src/components/chat-view/ChatView.module.scss
@@ -92,7 +92,7 @@
 }
 
 .name {
-  margin-top: 5px;
+  margin: 2px 0;
   font-size: 14px;
   font-weight: 600;
 }
@@ -117,14 +117,12 @@
 
 .message_item {
   position: relative;
-  //margin: 5px 0;
   justify-content: flex-end;
 }
 
 .content {
   background: #71C9F8;
-  padding: 4px 6px;
-  //padding: 7px 60px 7px 10px;
+  padding: 4px 10px;
   border-radius: 8px;
   max-width: 350px;
   display: inline-block;
@@ -150,7 +148,7 @@
   left: -18px;
   top: 5px;
   z-index: 1;
-  background: #71C9F8;
+  background: #fff;
   transform: rotate(55deg);
 }
 
@@ -158,15 +156,14 @@
   font-size: 12px;
   color: #777;
   position: absolute;
-  bottom: 7px;
+  bottom: -8px;
   right: 7px;
 }
 
 .text {
-  font-size: 13px;
+  font-size: 14px;
   overflow-wrap: break-word;
-  padding: 4px 0;
-  margin-bottom: 20px;
+  padding: 0 0 7px;
 }
 
 .flex {
@@ -175,7 +172,7 @@
 
 .mine {
   background: #f0f2f5;
-  padding: 4px 6px;
+  padding: 4px 10px;
   /*padding: 7px 60px 7px 10px;*/
   border-radius: 8px;
   max-width: 350px;
@@ -203,7 +200,7 @@
   right: -18px;
   top: 5px;
   z-index: 1;
-  background: #f0f2f5;
+  background: #fff;
   transform: rotate(40deg);
 }
 
