--- a/src/components/chat-view/ChatView.module.scss
+++ b/src/components/chat-view/ChatView.module.scss
@@ -85,11 +85,11 @@
   margin-left: 10px;
 }
 
-.icon_size {
-  width: 24px;
-  height: 24px;
-  margin: 0 10px;
-}
+//.icon_size {
+//  width: 24px;
+//  height: 24px;
+//  margin: 0 10px;
+//}
 
 .name {
   margin: 10px 0 0;
@@ -206,4 +206,3 @@
   background: #fff;
   transform: rotate(40deg);
 }
-
